--- a/css/general.css
+++ b/css/general.css
@@ -116,8 +116,8 @@ header {
 .bar {
   background-image: url(../assets/bar.png);
   background-repeat: none;
-  height: 3px;
-  width: 25px;
+  height: 4px;
+  width: 40px;
   margin-bottom: 5px;
   background-size: cover;
 }
@@ -222,8 +222,8 @@ header {
   padding-top: 30px;
 }
 
-#footer h4 {
-  text-align: center;
+#footer h3 {
+  font-weight: 500;
 }
 
 #map {
